fix codestyle issues